# ai_shell

./: .gitignore  CHANGELOG.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_team_mcp.rs  collab_workbench.rs  company_mode.rs  main.rs
src/components/: CompanyModePage.tsx  CompanyModeRoute.tsx  JsonPathTree.tsx  SessionCandidateCard.tsx  SessionCandidateVirtualList.tsx  SessionSyncCard.tsx  SyncEntryPreviewList.tsx  WorkspacePageLayout.tsx
src/lib/: aiTeamApi.ts  collabApi.ts
src/pages/: AiTeamMcpPage.tsx  CollabWorkbenchPage.tsx  FavoriteMessagesPage.tsx
src/types/: aiTeam.ts  collab.ts
src/workspace/: policy.ts
